Add initial documentation

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <div style="text-align: center; color: #ecba2f">
-    We're live on testnet
-  </div>
+  <!-- <div style="text-align: center; color: #ecba2f">
+    <a href="https://testnet.monorail.xyz" style="color: #ecba2f">🚀&nbsp;&nbsp;&nbsp;We&apos;re live on testnet at testnet.monorail.xyz&nbsp;&nbsp;&nbsp;🚀</a>
+  </div> -->
 {% endblock %}
